# rodydavis

./: .bazelignore  .bazelrc  .dockerignore  .eleventy.js  .eleventyignore  .env.example  .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitmodules  .metadata  404.html  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  about.md  ai.go  analysis_options.yaml  app-header.0698726e.js  app-header.561cdaac.js  app-header.7f1a48fb.js  app-header.a17b272f.js  app-header.b167ee55.js  app-header.bed0a715.js  app-header.c748af77.js  app-header.d4da7f8d.js  app-header.ee8bf833.js  app-header.fbdffc89.js  app.ts  astro-cli.js  astro.config.mjs  blog.njk  bun.lockb  client-shim.6d491e7a.js  client-shim.70661ac8.js  client-shim.751854cd.js  client.2a8bdfd6.js  client.ca3f7846.js  (+37 more)
.dart_tool/: package_config.json  package_config_subset  version
.firebase/: hosting.YnVpbGQ.cache  hosting.YnVpbGQvd2Vi.cache  hosting.ZGlzdA.cache
.obsidian/: workspace.json
_11ty/: apply-csp.js  video-gif.js
_astro/: BaseHead.astro_astro_type_script_index_0_lang.9653ebf9.js  NoteCards.6b57b596.js  NoteCards.b1f23b20.js  NoteCards.ea3ead25.js  SearchList.147b0e4f.js  SearchList.5ae64dfa.js  SearchList.c8ecffea.js  SearchList.fc0115e9.js  SearchList.fc0fa3e3.js  TagChip.6739d71e.js  TagChip.aa70bafd.js  _...slug_.1a336296.css  _...slug_.245394a8.css  _...slug_.3327ab81.css  _...slug_.37695600.css  _...slug_.53535a8b.css  _...slug_.543d6cb2.css  _...slug_.55121d5d.css  _...slug_.643f074d.css  _...slug_.680b5f6e.css  _...slug_.75960322.css  _...slug_.7a06253d.css  (+12 more)
js/: min.js  (+2 more)
(+1695 files in other folders)
