module(
    name = "rodydavis",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "3.1.1")
bazel_dep(name = "rules_nodejs", version = "6.7.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")
